# himitsu

./: .pre-commit-hooks.yaml  Cargo.toml  Dockerfile
himitsu/: Cargo.toml
himitsu-precommit/: .pre-commit-hooks.yaml  Cargo.toml
himitsu-precommit/src/: main.rs
himitsu-shim/: Cargo.toml
himitsu-shim/src/: main.rs
himitsu/resources/: config.ex.json
himitsu/src/: config.rs  error.rs  ffi.rs  lib.rs  main.rs  message.rs
himitsu/src/handler/: handler.rs  mod.rs
himitsu/src/scanners/: mod.rs  regex.rs
hooks/: pre-commit
