[package]
name = "himitsu-shim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
himitsu = { path = "../himitsu" }
log = "0.4"
tokio = {version = "1", features = ["full"]}
serde = "1"
serde_json = "1"