[package]
name = "himitsu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11"
log = "0.4"
tokio = {version = "1", features = ["full"]}
regex = "1"
ring = "0.17"
serde = "1"
serde_derive = "1.0"
serde_json = "1"
secrecy = "0.8"


[lib]
name = "himitsu"
crate-type = ["staticlib", "rlib"]