[package]
name = "himitsu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22"
env_logger = "0.11"
hex = "0.4"
log = "0.4"
regex = "1"
ring = "0.17"
reqwest = {version = "0.11", features = ["blocking"]}
serde = "1"
serde_derive = "1.0"
serde_json = "1"
secrecy = "0.8"
tokio = {version = "1", features = ["full"]}


[lib]
name = "himitsu"
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "encrypt-config"
